continuing with cargo.toml updates

--- a/common/bandwidth-controller/Cargo.toml
+++ b/common/bandwidth-controller/Cargo.toml
@@ -21,5 +21,5 @@ nym-task = { workspace = true }
 nym-validator-client = { workspace = true }
 
 [target."cfg(not(target_arch = \"wasm32\"))".dependencies.nym-validator-client]
-path = "../client-libs/validator-client"
+workspace = true
 features = ["http-client"]
