--- a/common/gateway-storage/Cargo.toml
+++ b/common/gateway-storage/Cargo.toml
@@ -28,8 +28,8 @@ tokio = { workspace = true, features = ["sync"], optional = true }
 tracing = { workspace = true }
 
 nym-credentials-interface = { workspace = true }
-nym-gateway-requests = { path = "../gateway-requests" }
-nym-sphinx = { path = "../nymsphinx" }
+nym-gateway-requests = { workspace = true }
+nym-sphinx = { workspace = true }
 
 [build-dependencies]
 anyhow = { workspace = true }
