--- a/nym-credential-proxy/nym-credential-proxy/Cargo.toml
+++ b/nym-credential-proxy/nym-credential-proxy/Cargo.toml
@@ -49,9 +49,9 @@ zeroize.workspace = true
 nym-bin-common = { path = "../../common/bin-common", features = [
     "basic_tracing",
 ] }
-nym-compact-ecash = { path = "../../common/nym_offline_compact_ecash" }
-nym-config = { path = "../../common/config" }
-nym-crypto = { path = "../../common/crypto", features = [
+nym-compact-ecash = { workspace = true }
+nym-config = { workspace = true }
+nym-crypto = { workspace = true, features = [
     "asymmetric",
     "rand",
     "serde",
@@ -59,12 +59,12 @@ nym-crypto = { path = "../../common/crypto", features = [
 nym-credentials = { path = "../../common/credentials" }
 nym-credentials-interface = { path = "../../common/credentials-interface" }
 nym-ecash-contract-common = { path = "../../common/cosmwasm-smart-contracts/ecash-contract" }
-nym-http-api-common = { path = "../../common/http-api-common", features = [
+nym-http-api-common = { workspace = true, features = [
     "utoipa",
     "middleware",
 ] }
 nym-http-api-client = { path = "../../common/http-api-client", default-features = false }
-nym-validator-client = { path = "../../common/client-libs/validator-client" }
+nym-validator-client = { workspace = true }
 nym-network-defaults = { path = "../../common/network-defaults" }
 
 nym-credential-proxy-requests = { path = "../nym-credential-proxy-requests", features = [
