--- a/clients/native/Cargo.toml
+++ b/clients/native/Cargo.toml
@@ -43,7 +43,7 @@ tokio-tungstenite = { workspace = true }
 zeroize = { workspace = true }
 
 ## internal
-nym-bandwidth-controller = { path = "../../common/bandwidth-controller" }
+nym-bandwidth-controller = { workspace = true }
 nym-bin-common = { path = "../../common/bin-common", features = [
     "output_format",
     "clap",
@@ -55,7 +55,7 @@ nym-client-core = { path = "../../common/client-core", features = [
     "fs-gateways-storage",
     "cli",
 ] }
-nym-config = { path = "../../common/config" }
+nym-config = { workspace = true }
 nym-credential-storage = { path = "../../common/credential-storage" }
 nym-credentials = { path = "../../common/credentials" }
 nym-crypto = { path = "../../common/crypto" }
@@ -65,7 +65,7 @@ nym-sphinx = { path = "../../common/nymsphinx" }
 nym-pemstore = { path = "../../common/pemstore" }
 nym-task = { path = "../../common/task" }
 nym-topology = { path = "../../common/topology" }
-nym-validator-client = { path = "../../common/client-libs/validator-client", features = [
+nym-validator-client = { workspace = true, features = [
     "http-client",
 ] }
 nym-client-websocket-requests = { path = "websocket-requests" }
