--- a/clients/socks5/Cargo.toml
+++ b/clients/socks5/Cargo.toml
@@ -36,19 +36,19 @@ nym-client-core = { path = "../../common/client-core", features = [
     "fs-gateways-storage",
     "cli",
 ] }
-nym-config = { path = "../../common/config" }
+nym-config = { workspace = true }
 nym-credential-storage = { path = "../../common/credential-storage" }
 nym-credentials = { path = "../../common/credentials" }
 nym-crypto = { path = "../../common/crypto" }
 nym-gateway-requests = { path = "../../common/gateway-requests" }
 nym-id = { path = "../../common/nym-id" }
 nym-network-defaults = { path = "../../common/network-defaults" }
-nym-ordered-buffer = { path = "../../common/socks5/ordered-buffer" }
+nym-ordered-buffer = { workspace = true }
 nym-pemstore = { path = "../../common/pemstore" }
 nym-socks5-client-core = { path = "../../common/socks5-client-core" }
 nym-sphinx = { path = "../../common/nymsphinx" }
 nym-topology = { path = "../../common/topology" }
-nym-validator-client = { path = "../../common/client-libs/validator-client", features = [
+nym-validator-client = { workspace = true, features = [
     "http-client",
 ] }
 
