--- a/common/credential-storage/Cargo.toml
+++ b/common/credential-storage/Cargo.toml
@@ -23,7 +23,7 @@ nym-compact-ecash = { workspace = true }
 nym-ecash-time = { workspace = true }
 
 [target."cfg(not(target_arch = \"wasm32\"))".dependencies.nym-sqlx-pool-guard]
-path = "../../nym-sqlx-pool-guard"
+workspace = true
 
 [target."cfg(not(target_arch = \"wasm32\"))".dependencies.sqlx]
 workspace = true
