--- a/common/ip-packet-requests/Cargo.toml
+++ b/common/ip-packet-requests/Cargo.toml
@@ -11,10 +11,10 @@ license.workspace = true
 [dependencies]
 bincode = { workspace = true }
 bytes = { workspace = true }
-nym-bin-common = { path = "../bin-common" }
-nym-crypto = { path = "../crypto" }
-nym-service-provider-requests-common = { path = "../service-provider-requests-common" }
-nym-sphinx = { path = "../nymsphinx" }
+nym-bin-common = { workspace = true }
+nym-crypto = { workspace = true }
+nym-service-provider-requests-common = { workspace = true }
+nym-sphinx = { workspace = true }
 rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
