--- a/common/registration/Cargo.toml
+++ b/common/registration/Cargo.toml
@@ -16,12 +16,12 @@ bincode = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio-util.workspace = true
 
-nym-authenticator-requests = { path = "../authenticator-requests" }
-nym-credentials-interface = { path = "../credentials-interface" }
-nym-crypto = { path = "../crypto" }
-nym-ip-packet-requests = { path = "../ip-packet-requests" }
-nym-sphinx = { path = "../nymsphinx" }
-nym-wireguard-types = { path = "../wireguard-types" }
+nym-authenticator-requests = { workspace = true }
+nym-credentials-interface = { workspace = true }
+nym-crypto = { workspace = true }
+nym-ip-packet-requests = { workspace = true }
+nym-sphinx = { workspace = true }
+nym-wireguard-types = { workspace = true }
 
 [dev-dependencies]
 bincode.workspace = true
