--- a/common/statistics/Cargo.toml
+++ b/common/statistics/Cargo.toml
@@ -23,11 +23,11 @@ si-scale = { workspace = true }
 strum = { workspace = true }
 strum_macros = { workspace = true }
 
-nym-crypto = { path = "../crypto" }
-nym-sphinx = { path = "../nymsphinx" }
-nym-credentials-interface = { path = "../credentials-interface" }
-nym-metrics = { path = "../nym-metrics" }
-nym-task = { path = "../task" }
+nym-crypto = { workspace = true }
+nym-sphinx = { workspace = true }
+nym-credentials-interface = { workspace = true }
+nym-metrics = { workspace = true }
+nym-task = { workspace = true }
 
 utoipa = { workspace = true, optional = true }
 
