--- a/common/wireguard-private-metadata/server/Cargo.toml
+++ b/common/wireguard-private-metadata/server/Cargo.toml
@@ -25,9 +25,9 @@ tower-http = { workspace = true, features = [
 utoipa = { workspace = true, features = ["axum_extras", "time"] }
 utoipa-swagger-ui = { workspace = true, features = ["axum"] }
 
-nym-credentials-interface = { path = "../../credentials-interface" }
-nym-credential-verification = { path = "../../credential-verification" }
-nym-http-api-common = { path = "../../http-api-common", features = [
+nym-credentials-interface = { workspace = true }
+nym-credential-verification = { workspace = true }
+nym-http-api-common = { workspace = true, features = [
     "middleware",
     "utoipa",
     "output",
