--- a/nym-data-observatory/Cargo.toml
+++ b/nym-data-observatory/Cargo.toml
@@ -20,11 +20,11 @@ axum = { workspace = true, features = ["tokio"] }
 chrono = { workspace = true }
 clap = { workspace = true, features = ["cargo", "derive", "env"] }
 cosmrs = { workspace = true }
-nym-config = { path = "../common/config" }
+nym-config = { workspace = true }
 nym-bin-common = { path = "../common/bin-common", features = ["output_format"] }
 nym-network-defaults = { path = "../common/network-defaults" }
 nym-task = { path = "../common/task" }
-nym-validator-client = { path = "../common/client-libs/validator-client" }
+nym-validator-client = { workspace = true }
 nyxd-scraper-psql = { path = "../common/nyxd-scraper-psql" }
 nyxd-scraper-shared = { path = "../common/nyxd-scraper-shared" }
 reqwest = { workspace = true, features = ["rustls-tls"] }
