--- a/service-providers/common/Cargo.toml
+++ b/service-providers/common/Cargo.toml
@@ -7,8 +7,8 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nym-bin-common = { path = "../../common/bin-common" }
-nym-sphinx-anonymous-replies = { path = "../../common/nymsphinx/anonymous-replies" }
+nym-bin-common = { workspace = true }
+nym-sphinx-anonymous-replies = { workspace = true }
 
 async-trait = { workspace = true }
 log = { workspace = true }
@@ -21,5 +21,5 @@ serde_json = { workspace = true }
 anyhow = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
 
-nym-sdk = { path = "../../sdk/rust/nym-sdk" }
-nym-socks5-requests = { path = "../../common/socks5/requests" }
+nym-sdk = { workspace = true }
+nym-socks5-requests = { workspace = true }
