--- a/tools/internal/testnet-manager/Cargo.toml
+++ b/tools/internal/testnet-manager/Cargo.toml
@@ -36,10 +36,10 @@ zeroize = { workspace = true, features = ["zeroize_derive"] }
 
 nym-bin-common = { path = "../../../common/bin-common", features = ["output_format", "basic_tracing"] }
 nym-crypto = { path = "../../../common/crypto", features = ["asymmetric", "rand", "serde"] }
-nym-config = { path = "../../../common/config" }
-nym-validator-client = { path = "../../../common/client-libs/validator-client" }
-nym-compact-ecash = { path = "../../../common/nym_offline_compact_ecash" }
-nym-http-api-client = { path = "../../../common/http-api-client" }
+nym-config = { workspace = true }
+nym-validator-client = { workspace = true }
+nym-compact-ecash = { workspace = true }
+nym-http-api-client = { workspace = true }
 dkg-bypass-contract = { path = "dkg-bypass-contract", default-features = false }
 
 # contracts:
@@ -48,7 +48,7 @@ nym-contracts-common = { path = "../../../common/cosmwasm-smart-contracts/contra
 nym-vesting-contract-common = { path = "../../../common/cosmwasm-smart-contracts/vesting-contract" }
 nym-group-contract-common = { path = "../../../common/cosmwasm-smart-contracts/group-contract" }
 nym-ecash-contract-common = { path = "../../../common/cosmwasm-smart-contracts/ecash-contract" }
-nym-coconut-dkg-common = { path = "../../../common/cosmwasm-smart-contracts/coconut-dkg" }
+nym-coconut-dkg-common = { workspace = true }
 nym-multisig-contract-common = { path = "../../../common/cosmwasm-smart-contracts/multisig-contract" }
 nym-performance-contract-common = { path = "../../../common/cosmwasm-smart-contracts/nym-performance-contract" }
 nym-pemstore = { path = "../../../common/pemstore" }
