--- a/tools/internal/testnet-manager/dkg-bypass-contract/Cargo.toml
+++ b/tools/internal/testnet-manager/dkg-bypass-contract/Cargo.toml
@@ -18,7 +18,7 @@ cosmwasm-std = { workspace = true }
 cosmwasm-schema = { workspace = true }
 cw-storage-plus = { workspace = true }
 
-nym-coconut-dkg-common = { path = "../../../../common/cosmwasm-smart-contracts/coconut-dkg" }
+nym-coconut-dkg-common = { workspace = true }
 nym-contracts-common = { path = "../../../../common/cosmwasm-smart-contracts/contracts-common" }
 
 [features]
