--- a/tools/nym-cli/Cargo.toml
+++ b/tools/nym-cli/Cargo.toml
@@ -24,7 +24,7 @@ tap = { workspace = true }
 
 nym-cli-commands = { path = "../../common/commands" }
 nym-bin-common = { path = "../../common/bin-common", features = ["basic_tracing"] }
-nym-validator-client = { path = "../../common/client-libs/validator-client", features = ["http-client"] }
+nym-validator-client = { workspace = true, features = ["http-client"] }
 nym-network-defaults = { path = "../../common/network-defaults" }
 
 [package.metadata.deb]
