--- a/tools/nym-id-cli/Cargo.toml
+++ b/tools/nym-id-cli/Cargo.toml
@@ -18,6 +18,6 @@ clap = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
 tracing.workspace = true
 
-nym-bin-common = { path = "../../common/bin-common", features = ["output_format", "basic_tracing"] }
-nym-credential-storage = { path = "../../common/credential-storage" }
-nym-id = { path = "../../common/nym-id" }
+nym-bin-common = { workspace = true, features = ["output_format", "basic_tracing"] }
+nym-credential-storage = { workspace = true }
+nym-id = { workspace = true }
