--- a/tools/nymvisor/Cargo.toml
+++ b/tools/nymvisor/Cargo.toml
@@ -35,7 +35,7 @@ url = { workspace = true, features = ["serde"] }
 
 nym-async-file-watcher = { path = "../../common/async-file-watcher" }
 nym-bin-common = { path = "../../common/bin-common", features = ["output_format", "basic_tracing"] }
-nym-config = { path = "../../common/config" }
+nym-config = { workspace = true }
 nym-task = { path = "../../common/task"}
 
 [dev-dependencies]
