--- a/tools/ts-rs-cli/Cargo.toml
+++ b/tools/ts-rs-cli/Cargo.toml
@@ -12,11 +12,11 @@ anyhow = { workspace = true }
 ts-rs = { workspace = true }
 walkdir = { workspace = true }
 
-nym-validator-client = { path = "../../common/client-libs/validator-client", features = [
+nym-validator-client = { workspace = true, features = [
     "generate-ts"
 ] }
-nym-api-requests = { path = "../../nym-api/nym-api-requests", features = ["generate-ts"] }
-nym-mixnet-contract-common = { path = "../../common/cosmwasm-smart-contracts/mixnet-contract", features = ["generate-ts"] }
-nym-vesting-contract-common = { path = "../../common/cosmwasm-smart-contracts/vesting-contract", features = ["generate-ts"] }
+nym-api-requests = { workspace = true, features = ["generate-ts"] }
+nym-mixnet-contract-common = { workspace = true, features = ["generate-ts"] }
+nym-vesting-contract-common = { workspace = true, features = ["generate-ts"] }
 nym-types = { path = "../../common/types", features = ["generate-ts"] }
 nym-wallet-types = { path = "../../nym-wallet/nym-wallet-types", features = ["generate-ts"] }
