--- a/wasm/mix-fetch/Cargo.toml
+++ b/wasm/mix-fetch/Cargo.toml
@@ -28,14 +28,14 @@ wasm-bindgen-futures = { workspace = true }
 thiserror = { workspace = true }
 tsify = { workspace = true, features = ["js"] }
 
-nym-bin-common = { path = "../../common/bin-common" }
-nym-http-api-client = { path = "../../common/http-api-client" }
-nym-socks5-requests = { path = "../../common/socks5/requests" }
-nym-ordered-buffer = { path = "../../common/socks5/ordered-buffer" }
-nym-service-providers-common = { path = "../../service-providers/common" }
-nym-validator-client = { path = "../../common/client-libs/validator-client", default-features = false }
-wasm-client-core = { path = "../../common/wasm/client-core" }
-wasm-utils = { path = "../../common/wasm/utils" }
+nym-bin-common = { workspace = true }
+nym-http-api-client = { workspace = true }
+nym-socks5-requests = { workspace = true }
+nym-ordered-buffer = { workspace = true }
+nym-service-providers-common = { workspace = true }
+nym-validator-client = { workspace = true, default-features = false }
+nym-wasm-client-core = { workspace = true }
+nym-wasm-utils = { workspace = true }
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
