--- a/wasm/zknym-lib/Cargo.toml
+++ b/wasm/zknym-lib/Cargo.toml
@@ -31,12 +31,12 @@ zeroize.workspace = true
 rand = { workspace = true }
 
 
-nym-bin-common = { path = "../../common/bin-common" }
-nym-compact-ecash = { path = "../../common/nym_offline_compact_ecash" }
-nym-credentials = { path = "../../common/credentials" }
-nym-crypto = { path = "../../common/crypto", features = ["asymmetric", "rand"] }
+nym-bin-common = { workspace = true }
+nym-compact-ecash = { workspace = true }
+nym-credentials = { workspace = true }
+nym-crypto = { workspace = true, features = ["asymmetric", "rand"] }
 nym-http-api-client = { path = "../../common/http-api-client" }
-wasm-utils = { path = "../../common/wasm/utils" }
+nym-wasm-utils = { path = "../../common/wasm/utils" }
 
 [dev-dependencies]
 anyhow = { workspace = true }
